# Coh-verifier-prototype

./: .gitignore  .gitmodules  CHANGELOG.md  FORMAL_FOUNDATION.md  Makefile  QUICKSTART.md  README.md  SECURITY_MODEL.md  SYSTEM_SPEC.md  coh-bit-visualization.html  ctrl_advanced_benchmark_runner.py  implementation_plan_dashboard.md  make.cmd  package-lock.json
Coh-wedge-master/: README.md
ape/: Cargo.toml
ape/fixtures/: invalid_accounting.json  invalid_chain_digest.jsonl  invalid_schema.json  invalid_state_link.jsonl  overflow.json  valid_chain.jsonl  valid_micro.json
ape/output/: strategy_demo_results.json
ape/src/: adapter.rs  engine.rs  fixtures.rs  lib.rs  main.rs  pipeline.rs  proposal.rs  realdata.rs
ape/src/strategies/: advanced.rs  mod.rs  mutation.rs  recombination.rs  runtime.rs
coh-dashboard/: index.html  package-lock.json  package.json  vitest.config.js
coh-node/: Cargo.toml  PRODUCTION_AUDIT_REPORT.md  PRODUCTION_AUDIT_RUNBOOK.md  README.md  WEDGE_CHECKLIST.md  benchmark_results.json  benchmark_results_utf8.json  benchmark_results_v2_1.json  benchmark_results_v2_2.json  benchmark_results_v2_2_recursive.json  benchmark_results_v2_2_recursive_final.json  benchmark_summary.json  benchmark_v2_3.json  benchmark_v2_3_final.json  demo_bridge.py
coh-t-stack/: Coh.lean  _repair_temp.lean  _search_temp.lean  audit_axioms.lean  check_footprint.lean  npe_lean_tactic_repair_v0_3.rs  persistent_worker.lean  research_clifford.lean  search_test.lean  temp.lean  test_exact_temp.lean  test_field.lean  test_find.lean  test_inf.lean  test_linarith.lean  (+3 more)
(+374 files in other folders)
